# Super-Drone

./: CMakeLists.txt  README.md
Notebooks/.ipynb_checkpoints/: Data_Pre-processing-checkpoint.ipynb
kicad_files/PCB_Schematic/Pre-Hal_Drone/: Pre-Hal_Drone.kicad_prl  Pre-Hal_Drone.kicad_pro  Pre-Hal_Drone.kicad_sch
src/: preHalDrone.c
